--- a/src-docs/.vuepress/styles/index.scss
+++ b/src-docs/.vuepress/styles/index.scss
@@ -12,6 +12,8 @@
     }    
 }
 
+//@import "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css";
+
 //@import '../../../dist/uswds-vue.css';
 @import "../../../src/styles/uswds-vue.scss";
 @import "./theme.scss";
@@ -20,15 +22,6 @@
 @import '~bootstrap-vue/src/index.scss';
 
 
-a.sidebar-link.active,  a.sidebar-link:active {
-    outline: none !important;
-}
-
-a.sidebar-link.active  {
-    font-weight: 600 !important;
-    color: #3eaf7c !important;
-    border-left-color: #3eaf7c !important;
-}  
 
 div.theme-default-content:not(.custom), .page-edit, .page-nav {
     max-width: 1200px !important;
