--- a/src-docs/.vuepress/styles/index.scss
+++ b/src-docs/.vuepress/styles/index.scss
@@ -14,14 +14,10 @@
 
 //@import "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css";
 
-//@import '../../../dist/uswds-vue.css';
-@import "../../../src/styles/uswds-vue.scss";
+@import "../../../src//styles/uswds-vue.scss";
 @import "./theme.scss";
 // Then import Bootstrap an BootstrapVue SCSS files (order is important)
 @import '~bootstrap/scss/bootstrap.scss';
-@import '~bootstrap-vue/src/index.scss';
-
-
 
 div.theme-default-content:not(.custom), .page-edit, .page-nav {
     max-width: 1200px !important;
